--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+body {
+  background-attachment: fixed;
+  background-image: white;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  border: none;
+  background-color: transparent;
   color: white;
+  padding: 15px 10px 1px 5px;
 }
 
-.App-link {
-  color: #61dafb;
+button:focus:active {
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  color: pink;
+  font-family: "Noticia Text", serif;
+  font-size: 11px;
+  font-weight: 200;
+  line-height: 20px;
+  list-style: none;
+  text-align: right;
+  position: relative;
+  bottom: 154px;
+  right: 25px;
 }
