--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,20 @@
-body {
-  background-attachment: fixed;
-  background-image: white;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.App {
+  max-width: 400px;
+  margin: 10px auto;
 }
 
-button {
-  border: none;
-  background-color: transparent;
-  color: white;
-  padding: 15px 10px 1px 5px;
-}
-
-button:focus:active {
-  font-weight: bold;
-}
-
-ul {
-  color: pink;
-  font-family: "Noticia Text", serif;
+.App footer {
   font-size: 11px;
-  font-weight: 200;
-  line-height: 20px;
-  list-style: none;
-  text-align: right;
-  position: relative;
-  bottom: 154px;
-  right: 25px;
+  margin: 10px 0;
+  color: black;
+}
+
+a:link {
+  margin: 10px 0;
+  color: #db17a0;
+}
+
+.App h1 {
+  text-align: center;
+  color: black;
 }
